add post to github, but don't work

--- a/community/src/main/resources/templates/index.html
+++ b/community/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
             <!-- 添加登录按钮 -->
-            <a class="btn btn-outline-primary ms-3" href="#" role="button">登录</a>
+            <a class="btn btn-outline-primary ms-3" href="https://github.com/login/oauth/authorize?client_id=Ov23liv0K3c4GiHBkWG8&redirect_uri=http://localhost:8887/callback&scope=user&state=1" role="button">登录</a>
         </div>
     </div>
 </nav>
