replace githhub with gitee, solve the error of connection time

--- a/community/src/main/resources/templates/index.html
+++ b/community/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
             <!-- 添加登录按钮 -->
-            <a class="btn btn-outline-primary ms-3" href="https://github.com/login/oauth/authorize?client_id=Ov23liv0K3c4GiHBkWG8&redirect_uri=http://localhost:8887/callback&scope=user&state=1" role="button">登录</a>
+            <a class="btn btn-outline-primary ms-3" href="https://gitee.com/oauth/authorize?client_id=3771f18ada3a6fd9f46a66910f74fa01348d085957452c6c74552fcaad26b9e7&redirect_uri=http://localhost:8887/callback&response_type=code&scope=user_info" role="button">登录</a>
         </div>
     </div>
 </nav>
