--- a/community/src/main/resources/templates/index.html
+++ b/community/src/main/resources/templates/index.html
@@ -2,10 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>电兵社区</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
@@ -15,8 +16,9 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">电兵社区</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/">电兵社区</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -24,56 +26,90 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">首页</a>
                 </li>
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Link</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item dropdown">-->
-<!--                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-<!--                        Dropdown-->
-<!--                    </a>-->
-<!--                    <ul class="dropdown-menu">-->
-<!--                        <li><a class="dropdown-item" href="#">Action</a></li>-->
-<!--                        <li><a class="dropdown-item" href="#">Another action</a></li>-->
-<!--                        <li><hr class="dropdown-divider"></li>-->
-<!--                        <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-<!--                    </ul>-->
-<!--                </li>-->
                 <li class="nav-item">
                     <a class="nav-link disabled" aria-disabled="true">其它</a>
                 </li>
             </ul>
-                <form class="d-flex ms-auto" role="search"> <!-- 添加 ms-auto 使搜索框右对齐 -->
-                    <input class="form-control me-2" type="search" placeholder="搜索话题" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+            <form class="d-flex ms-auto" role="search"> <!-- 添加 ms-auto 使搜索框右对齐 -->
+                <input class="form-control me-2" type="search" placeholder="搜索话题" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
 
 
-                <!-- 登录按钮或用户中心，右侧显示 -->
-                <ul class="navbar-nav ms-auto"> <!-- 使整个ul右对齐 -->
-                    <a href="/publish" class="btn btn-primary me-2">发布</a>
-                    <!-- 用户已登录时显示的下拉菜单 -->
-                    <li class="nav-item dropdown" th:if="${session.user != null}">
+            <!-- 登录按钮或用户中心，右侧显示 -->
+            <ul class="navbar-nav ms-auto"> <!-- 使整个ul右对齐 -->
+                <a href="/publish" class="btn btn-primary me-2">发布</a>
+                <!-- 用户已登录时显示的下拉菜单 -->
+                <li class="nav-item dropdown" th:if="${session.user != null}">
 
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${session.user.getName()}">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false" th:text="${session.user.getName()}">
 
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">消息中心</a></li>
-                            <li><a class="dropdown-item" href="#">个人资料</a></li>
-                            <li><a class="dropdown-item" href="#">退出登录</a></li>
-                        </ul>
-                    </li>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">消息中心</a></li>
+                        <li><a class="dropdown-item" href="#">个人资料</a></li>
+                        <li><a class="dropdown-item" href="#">退出登录</a></li>
+                    </ul>
+                </li>
 
-                    <!-- 用户未登录时显示的登录按钮 -->
-                    <li class="nav-item" th:if="${session.user == null}">
-                        <a class="btn btn-outline-primary ms-3" href="https://gitee.com/oauth/authorize?client_id=3771f18ada3a6fd9f46a66910f74fa01348d085957452c6c74552fcaad26b9e7&redirect_uri=http://localhost:8887/callback&response_type=code&scope=user_info" role="button">登录</a>
-                    </li>
-                </ul>
+                <!-- 用户未登录时显示的登录按钮 -->
+                <li class="nav-item" th:if="${session.user == null}">
+                    <a class="btn btn-outline-primary ms-3"
+                       href="https://gitee.com/oauth/authorize?client_id=3771f18ada3a6fd9f46a66910f74fa01348d085957452c6c74552fcaad26b9e7&redirect_uri=http://localhost:8887/callback&response_type=code&scope=user_info"
+                       role="button">登录</a>
+                </li>
+            </ul>
 
-<!--            <a class="btn btn-outline-primary ms-3" href="https://gitee.com/oauth/authorize?client_id=3771f18ada3a6fd9f46a66910f74fa01348d085957452c6c74552fcaad26b9e7&redirect_uri=http://localhost:8887/callback&response_type=code&scope=user_info" role="button">登录</a>-->
+            <!--            <a class="btn btn-outline-primary ms-3" href="https://gitee.com/oauth/authorize?client_id=3771f18ada3a6fd9f46a66910f74fa01348d085957452c6c74552fcaad26b9e7&redirect_uri=http://localhost:8887/callback&response_type=code&scope=user_info" role="button">登录</a>-->
 
         </div>
     </div>
 </nav>
+
+
+<div class="container" style="max-width: 1600px;">
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-9 col-12">
+            <div class="card shadow-sm border-0 rounded-lg">
+                <div class="card-body p-5">
+                    <h2 class="text-center mb-4 text-primary">
+                        <i class="bi bi-card-list"></i> 发现
+                    </h2>
+                    <hr>
+                    <div class="row g-0 bg-body-secondary position-relative" th:each="question : ${questions}">
+                        <div class="col-md-6 mb-md-0 p-md-2">
+                            <img th:src="${question.users.getAvatarUrl()}"  class="img-fluid" style="max-width: 100%; height: auto; margin-bottom: 16px;">
+                        </div>
+                        <div class="col-md-6 p-3 ps-md-0" style="padding-left: 16px;">
+                            <h5 class="mt-0" th:text="${question.getTitle()}"></h5>
+                            <p th:text="${question.getDescription()}"></p>
+<!--                            <a href="#" class="stretched-link">Go somewhere</a>-->
+                            <br>
+                            <span class="text-muted">
+                                <span th:text="${question.getViewCount()}"></span> 次浏览
+                                <span th:text="${question.getLikeCount()}"></span> 个点赞
+                                <span th:text="${question.getCommentCount()}"></span> 个评论 发布日期：
+                                <span th:text="${#calendars.format(question.getGmtCreate(),'yy MMMM dd')}"></span>
+                            </span>
+                        </div>
+
+                        <div class="row" style="border-bottom: 2px solid #ddd; margin-bottom: 20px;"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 右侧说明区（占 4/12 屏幕）-->
+        <div class="col-lg-4 col-md-3 d-none d-md-block">
+            <div class="card shadow-sm mb-4" style="border-radius: .5rem; border: 1px solid #dcdcdc;">
+                <div class="card-body p-4">
+                    <h4 class="text-center">热点话题</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
