--- a/community/src/main/resources/templates/publish.html
+++ b/community/src/main/resources/templates/publish.html
@@ -3,14 +3,14 @@
 <head>
     <title>发布 —— 电兵社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-utilities.min.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-utilities.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-grid.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/community.css">
+    <link rel="stylesheet" href="/css/community.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
-    <script src="js/bootstrap.bundle.min.js" type="application/javascript"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/bootstrap.bundle.min.js" type="application/javascript"></script>
 </head>
 
 <body>
@@ -28,6 +28,8 @@
                         <div th:if="${error != null}" class="alert alert-danger">
                             <i class="bi bi-exclamation-triangle"></i> <span th:text="${error}"></span>
                         </div>
+
+                        <input type="hidden" name="id" th:value="${id}">
 
                         <!-- 问题标题 -->
                         <div class="mb-4">
